--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -36,7 +36,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:enabled="true"
-                android:focusable="true" />
+                android:focusable="true"
+                android:textColor="?android:attr/colorForeground" />
         </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -52,7 +53,8 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textEmailAddress" />
+                android:inputType="textEmailAddress"
+                android:textColor="?android:attr/colorForeground" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -71,7 +73,8 @@
                 android:layout_marginBottom="16dp"
                 android:focusable="true"
 
-                android:inputType="textPassword" />
+                android:inputType="textPassword"
+                android:textColor="?android:attr/colorForeground" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -98,7 +101,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:focusable="true"
-                    android:inputType="text" />
+                    android:inputType="text"
+                    android:textColor="?android:attr/colorForeground" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -114,7 +118,8 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:inputType="text" />
+                    android:inputType="text"
+                    android:textColor="?android:attr/colorForeground" />
             </com.google.android.material.textfield.TextInputLayout>
 
         </LinearLayout>
