--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,7 +4,7 @@
         <!-- Customize your dark theme here. -->
         <item name="colorPrimary">@color/blue_grotto</item>
         <item name="colorPrimaryDark">@color/charcoal</item>
-        <item name="colorAccent">@color/blue_grotto</item>"
+        <item name="colorAccent">#4DFAFA</item>"
         <item name="android:windowBackground">@color/charcoal_light</item>
         <item name="android:textColor">@color/white</item>
         <item name="colorSurface">@color/backgroundDark</item>
